@@ -1,6 +1,7 @@
 (def tk-version "1.0.1")
-(def tk-jetty-version "1.1.0")
+(def tk-jetty-version "1.1.1")
 (def ks-version "1.0.0")
+(def ps-version "2.0.0-SNAPSHOT")
 
 (defn deploy-info
   [url]
@@ -50,7 +51,17 @@
   :repositories [["releases" "http://nexus.delivery.puppetlabs.net/content/repositories/releases/"]
                  ["snapshots" "http://nexus.delivery.puppetlabs.net/content/repositories/snapshots/"]]
 
-  :plugins [[lein-release "1.0.5"]]
+  :plugins [[lein-release "1.0.5" :exclusions [org.clojure/clojure]]]
+
+  :uberjar-name "puppet-server-release.jar"
+  :lein-ezbake {:vars {:user "puppet"
+                       :group "puppet"
+                       :start-timeout "120"
+                       :build-type "foss"
+                       :java-args "-Xms2g -Xmx2g -XX:MaxPermSize=256m"}
+                :resources {:dir "tmp/ezbake-resources"}
+                :config-dir "ezbake/config"}
+
   :lein-release {:scm         :git
                  :deploy-via  :lein-deploy}
 
@@ -68,7 +79,13 @@
                                    [spyscope "0.1.4" :exclusions [clj-time]]]
                    :injections    [(require 'spyscope.core)]}
 
-             :uberjar {:aot [puppetlabs.trapperkeeper.main]}
+             :ezbake {:dependencies ^:replace [[puppetlabs/puppet-server ~ps-version]
+                                               [puppetlabs/trapperkeeper-webserver-jetty9 ~tk-jetty-version]
+                                               [org.clojure/tools.nrepl "0.2.3"]]
+                      :plugins [[puppetlabs/lein-ezbake "0.1.0"]]
+                      :name "puppetserver"}
+             :uberjar {:aot [puppetlabs.trapperkeeper.main]
+                       :dependencies [[puppetlabs/trapperkeeper-webserver-jetty9 ~tk-jetty-version]]}
              :ci {:plugins [[lein-pprint "1.1.1"]]}}
 
   :test-selectors {:default (complement :integration)
